signUrl returns a URI as the value will not typically need to be resolved locally